doc(userguide.authoringBuilds.basics.writingBuildScripts): add notes

--- a/platforms/documentation/docs/src/snippets/tutorial/projectApi/groovy/build.gradle
+++ b/platforms/documentation/docs/src/snippets/tutorial/projectApi/groovy/build.gradle
@@ -1,5 +1,8 @@
 // tag::project-name[]
+// top-level reference -- to the -- `Project` object's `name` property
 println name
+
+//  `project` property / -- available to -- ANY build script
 println project.name
 // end::project-name[]
 
